<resources>
    <string name="app_name">Sensors</string>
    <string name="mainIntroText">Interacting With Sensors</string>
    <string name="accelerometerButton">&#xe1c1; Accelerometer</string>
    <string name="accelerometerIntroText">Accelerometer Sensor</string>
    <string name="accelerometerInfo"> </string>
    <string name="xValueText"> </string>
    <string name="yValueText"> </string>
    <string name="zValueText"> </string>
    <string name="gyroscopeButtonText">&#xe41d; Gyroscope Sensor</string>
    <string name="gyroscopeIntroText">Gyroscope Sensor</string>
    <string name="proximityButton">&#xe8c7; Proximity Sensor</string>
    <string name="proximityIntroText">Proximity Sensor</string>
    <string name="proximityValue"> </string>
    <string name="cameraButton">&#xe8fc; Camera</string>
    <string name="cameraIntroText">&#xe8fc;</string>
    <string name="captureButton">&#xe3b0; Snap</string>
    <string name="saveButton">&#xe439; Save</string>
    <string name="discardButton">&#xe033; Discard</string>
    <string name="sensorList">&#xe242; List of Sensors Available</string>
    <string name="sensorListIntroText">List Of Available Sensors</string>
    <string name="allSensors"> </string>
</resources>
