<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    tools:context="sagar.com.sensors.CameraSensor">

    <TextView
        android:text="@string/cameraIntroText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#EDE7F6"
        android:id="@+id/cameraIntroId"
        android:textStyle="bold"
        android:textSize="50sp"
        android:layout_marginTop="17dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageId"
        android:layout_below="@+id/cameraIntroId"
        android:layout_above="@+id/captureButtonId"/>

    <Button
        android:text="@string/captureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#9575CD"
        android:backgroundTint="#EDE7F6"
        android:layout_marginBottom="11dp"
        android:textSize="18sp"
        android:id="@+id/captureButtonId"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/saveButtonId"
        android:layout_toEndOf="@+id/saveButtonId"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"/>

    <Button
        android:text="@string/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#9575CD"
        android:backgroundTint="#EDE7F6"
        android:textSize="18sp"
        android:id="@+id/saveButtonId"
        android:layout_below="@+id/imageId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"/>

    <Button
        android:text="@string/discardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#9575CD"
        android:backgroundTint="#EDE7F6"
        android:id="@+id/discardButtonId"
        android:textSize="18sp"
        android:layout_below="@+id/imageId"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp"/>

</android.widget.RelativeLayout>
